@@ -50,4 +50,167 @@ subtest 'unrecognized encoding formats do not result in errors' => sub {
   );
 };
 
+subtest 'media_type and encoding handlers' => sub {
+  my $js = JSON::Schema::Modern->new;
+
+  cmp_deeply(
+    $js->get_media_type('application/json')->(\'{"alpha": "a string"}'),
+    \ { alpha => 'a string' },
+    'application/json media_type decoder',
+  );
+
+  cmp_deeply(
+    $js->get_media_type('text/plain')->(\'foo'),
+    \'foo',
+    'text/plain media_type decoder',
+  );
+
+  cmp_deeply(
+    $js->get_media_type('application/json')->($js->get_encoding('base64')->(\'eyJmb28iOiAiYmFyIn0K')),
+    \ { foo => 'bar' },
+    'base64 encoding decoder + application/json media_type decoder',
+  );
+
+
+  # evaluate some schemas under draft7 and see that they validate
+  cmp_deeply(
+    $js->evaluate(
+      my $data = { encoded_object => 'eyJmb28iOiAiYmFyIn0K' },
+      my $schema = {
+        properties => {
+          encoded_object => {
+            contentEncoding => 'base64',
+            contentMediaType => 'application/json',
+            contentSchema => {
+              type => 'object',
+              properties => {
+                foo => {
+                  type => 'number',
+                },
+              },
+            },
+          },
+        },
+      },
+    )->TO_JSON,
+    { valid => true },
+    'under the current spec version, content* keywords are not assertions',
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      $data,
+      $schema,
+      {
+        specification_version => 'draft7',
+        validate_content_schemas => 1,
+      },
+    )->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        {
+          instanceLocation => '/encoded_object/foo',
+          keywordLocation => '/properties/encoded_object/contentSchema/properties/foo/type',
+          error => 'wrong type (expected number)',
+        },
+        {
+          instanceLocation => '/encoded_object',
+          keywordLocation => '/properties/encoded_object/contentSchema/properties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '/encoded_object',
+          keywordLocation => '/properties/encoded_object/contentSchema',
+          error => 'subschema is not valid',
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/properties',
+          error => 'not all properties are valid',
+        },
+      ],
+    },
+    'under draft7, these keywords are assertions',
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      'a string',
+      {
+        contentEncoding => 'whargarbl',
+        contentMediaType => 'whargarbl',
+        contentSchema => false,
+      },
+      {
+        specification_version => 'draft7',
+        validate_content_schemas => 1,
+      },
+    )->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        {
+          instanceLocation => '',
+          keywordLocation => '/contentEncoding',
+          error => 'cannot find decoder for contentEncoding "whargarbl"',
+        },
+      ],
+    },
+    'evaluation aborts with an unrecognized contentEncoding',
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      'a string',
+      {
+        contentMediaType => 'whargarbl',
+        contentSchema => false,
+      },
+      {
+        specification_version => 'draft7',
+        validate_content_schemas => 1,
+      },
+    )->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        {
+          instanceLocation => '',
+          keywordLocation => '/contentMediaType',
+          error => 'cannot find decoder for contentMediaType "whargarbl"',
+        },
+      ],
+    },
+    'evaluation aborts with an unrecognized contentMediaType',
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      { encoded_object => 'eyJmb28iOi%iYmFyIn0K' }, # character outside of the base64 range
+      $schema,
+      {
+        specification_version => 'draft7',
+        validate_content_schemas => 1,
+      },
+    )->TO_JSON,
+    {
+      valid => false,
+      errors => [
+        {
+          instanceLocation => '/encoded_object',
+          keywordLocation => '/properties/encoded_object/contentEncoding',
+          error => re(qr/^invalid characters in base64 string/),
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/properties',
+          error => 'not all properties are valid',
+        },
+      ],
+    },
+    'under draft7, these keywords are assertions',
+  );
+};
+
 done_testing;
