@@ -47,9 +47,9 @@ type.json                                   80          0     0
 uniqueItems.json                            64          0     0
 unknownKeyword.json                          3          0     0
 optional/bignum.json                         2          7     0
-optional/content.json                        6          4     0
+optional/content.json                       10          0     0
 optional/ecmascript-regex.json              60         14     0
 optional/float-overflow.json                 0          1     0
 optional/non-bmp-regex.json                 12          0     0
 ---------------------------------------------------------------
-TOTAL                                      873         26     0
+TOTAL                                      877         22     0
