@@ -3,6 +3,9 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - fix evaluate() callbacks for keywords that have no
             runtime-specific actions
+          - optional support for contentEncoding, contentMediaType and
+            contentSchema with the validate_content_schemas option and
+            "encoding", "media_type" handler registries
 
 0.525     2021-11-17 05:35:24Z
           - minimum Perl version raised to 5.20
